--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <div class="col-sm-4">
                             <div class="header-logo text-center">
                                 <a href="index.html">
-                                    <img alt="" src="images/logo/logoo.png">
+                                    <img alt="" src="images/logo/logo.png">
                                 </a>
                             </div>
                         </div>
