--- a/freak/index.html
+++ b/freak/index.html
@@ -1666,7 +1666,7 @@
                             <div class="col-md-offset-2 col-md-8">
                                 <div class="testimonial-list">
                                     <div class="single-testimonial text-center">
-                                        <img alt="" src="images/testimonial/1.jpg">
+                                        <img alt="" src="/">
                                         <div class="testimonial-info white-bg clearfix">
                                             <div class="testimonial-author text-uppercase">
                                                 <h5>ANIKA MOLLIK</h5>
