--- a/dompdf/lib/fonts/log.htm
+++ b/dompdf/lib/fonts/log.htm
@@ -1,1 +1,1 @@
-<span style='color: #000'>197 frames</span>	<span style='color: #900'>12,032 KB</span>	<span style='color: #090'>782.22 ms</span>	<span style='color: #009' title='Quirksmode'><span style='color: #0c0'>OFF</span></span><br />
+<span style='color: #000'>285 frames</span>	<span style='color: #900'>4,096 KB</span>	<span style='color: #090'>554.33 ms</span>	<span style='color: #009' title='Quirksmode'><span style='color: #c00'>ON</span></span><br />
