--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
 
 
     <!-- Modernizr JS -->
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js" nonce="0F81418D444B6D4F89DEED7D26FD5F1E" charset="UTF-8"></script><script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 
 <body>
